buildscript {
	ext {
		springBootVersion = '3.1.7'
	}

	repositories {
		mavenCentral()
	}

	dependencies {
		classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
		classpath "io.spring.gradle:dependency-management-plugin:1.1.4"
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	group = 'pothole_solution'
	version = '0.0.1-SNAPSHOT'

	sourceCompatibility = '17'

	repositories {
		mavenCentral()
	}

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		implementation 'org.springframework.boot:spring-boot-starter-web'
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'

		runtimeOnly 'org.postgresql:postgresql'

		implementation 'org.hibernate.orm:hibernate-spatial'


		implementation("com.slack.api:bolt:1.39.0")
		implementation("com.slack.api:bolt-servlet:1.39.0")
		implementation("com.slack.api:bolt-jetty:1.39.0")
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}
